--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="node_modules/react-quill/dist/quill.bubble.css">
     <link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <title>Notings</title>
   </head>
   <body>
@@ -17,6 +17,6 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
-  
+
   </body>
 </html>
